fix UI - align control button on dashboard

--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -52,6 +52,7 @@
 .dashboard__control {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     margin-top: 16px;
 }
 
